welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:3: error: reassignment to val
	if ((a = b)&&(b = c)) {20} else {10}
               ^